--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "@react-three/drei": "^9.56.5",
-    "@react-three/fiber": "^8.10.1",
-    "@react-three/xr": "^5.1.3",
+    "@react-three/drei": "9.56.24",
+    "@react-three/fiber": "8.10.1",
+    "@react-three/xr": "5.1.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/three": "0.149.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "three": "^0.149.0",
+    "three": "0.149.0",
     "typescript": "4.9.4"
   }
 }
