--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "@react-three/cannon": "6.5.2",
     "@react-three/drei": "9.56.24",
-    "@react-three/fiber": "8.10.1",
+    "@react-three/fiber": "8.9.1",
+    "@react-three/rapier": "0.14.0",
     "@react-three/xr": "5.1.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
