--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -14,16 +14,19 @@
     "@react-three/fiber": "8.9.1",
     "@react-three/rapier": "0.14.0",
     "@react-three/xr": "5.1.3",
+    "next": "13.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "three": "0.149.0"
+  },
+  "devDependencies": {
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/three": "0.149.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "three": "0.149.0",
+    "r3f-perf": "7.1.2",
     "typescript": "4.9.4"
   }
 }
