Revert "Add Triplex and clean left-over scene"
This reverts commit cd2345dcc9a03927e1f8171265bf9b7c12718664.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    },
-    "types": ["@react-three/fiber"]
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "."],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
