--- a/package.json
+++ b/package.json
@@ -5,22 +5,18 @@
     "dev": "next dev",
     "format": "pnpm prettier --write \"**/*.{js,ts,tsx,scss,json,md,mdx}\"",
     "lint": "next lint",
-    "start": "next start",
-    "editor": "triplex editor"
+    "start": "next start"
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "@react-three/drei": "^9.74.6",
-    "@react-three/fiber": "^8.13.0",
+    "@react-three/drei": "9.56.24",
+    "@react-three/fiber": "8.9.1",
     "@react-three/rapier": "0.14.0",
     "@react-three/xr": "5.1.3",
     "next": "13.1.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "three": "^0.153.0",
-    "@triplex/run": "^0.54.0",
-    "@types/react": "^18.2.8",
-    "@types/three": "^0.152.1"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "three": "0.149.0"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
