--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "8.9.1",
     "@react-three/rapier": "0.14.0",
     "@react-three/xr": "5.1.3",
+    "html2canvas": "1.4.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
